# shogun-libtooling

./: LICENSE  README.md
find_labels/: CMakeLists.txt  ex.cpp  main.cpp
refactor_multiclass/: CMakeLists.txt  RefectormulticlassCheck.cpp  RefectormulticlassCheck.h  multiclass.cpp
sharedptr/: CMakeLists.txt
sharedptr/src/: smart_ptrize.cc
